# shiba_inu_counter

./: CMakeLists.txt  Makefile  README.md  start.sh
src/: main.cpp
src/gameplay/: entity.cpp  entity.h
src/graphics/: draw.cpp  draw.h
src/utils/: vectors.cpp  vectors.h
